crates/solidity-v2/testing/snapshots/diagnostics_output/structure/payable_function_type_must_be_external/explicit_internal/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 7415] Error: Only external function types can be payable.
   ╭─[input.sol:6:16]
   │
 6 │     function f(function() internal payable cb) public {}
   │                ───────────────┬──────────────  
   │                               ╰──────────────── Error occurred here.
───╯
